--- a/site/views/logIn.jade
+++ b/site/views/logIn.jade
@@ -6,9 +6,9 @@ body
   h1 Log In
   form(name="logIn", method="POST")
     label(for="username") Username:
-    input(id="username", type="text")
+    input(id="username", name="username", type="text")
     br
     label(for="password") Password:
-    input(id="password", type="password")
+    input(id="password", name="password", type="password")
     br
     input(type="submit", value="Submit")
