--- a/site/views/signUp.jade
+++ b/site/views/signUp.jade
@@ -6,12 +6,12 @@ body
   h1 Sign Up
   form(name="signUp", method="POST")
     label(for="username") Username:
-    input(id="username", type="text")
+    input(id="username", name="username", type="text")
     br
     label(for="password") Password:
-    input(id="password", type="password")
+    input(id="password", name="password", type="password")
     br
     label(for="passwordConfirmation") Password Confirmation:
-    input(id="passwordConfirmation", type="password")
+    input(id="passwordConfirmation", name="passwordConfirmation", type="password")
     br
     input(type="submit", value="Submit")
